Fixed gap under footer

--- a/src/app/components/nav/nav-component.scss
+++ b/src/app/components/nav/nav-component.scss
@@ -8,7 +8,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
     padding: 0 1rem;
-    margin-top: 0;
+    margin: 0;
 
     li {
       a {
